--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.98"
 clap = { version = "4.5.40", features = ["derive"] }
 env_logger = "0.11.8"
 log = "0.4.27"
-pam-client2 = "0.5.2"
+pam = "0.8"
 russh = {version="0.52.1", features=["async-trait"]}
 sshcerts = "0.14.0"
 thiserror = "2.0.12"
