--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,19 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+base64 = "0.22.1"
 clap = { version = "4.5.40", features = ["derive"] }
 env_logger = "0.11.8"
 log = "0.4.27"
+minijinja = "2.10.2"
+nix = {version="0.30.1", features= ["process", "user", "socket"]}
 pam = "0.8"
+rand = "0.9.1"
 russh = {version="0.52.1", features=["async-trait"]}
+serde = "1.0.219"
+serde_json = {version="1.0.140"}
+ssh-key = {version="0.6.7", features=["ed25519"]}
 sshcerts = "0.14.0"
 thiserror = "2.0.12"
 tokio = {version="1.45.1",features=["full"]}
+toml = "0.8.23"
