--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.98"
 base64 = "0.22.1"
 clap = { version = "4.5.40", features = ["derive"] }
+duration-str = "0.17.0"
 env_logger = "0.11.8"
 log = "0.4.27"
 minijinja = "2.10.2"
