--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,20 @@ nix = {version="0.30.1", features= ["process", "user", "socket"]}
 pam = "0.8"
 rand = "0.9.1"
 russh = {version="0.52.1", features=["async-trait"]}
+russh-keys = "0.49.2"
 serde = {version="1.0.219", features=["derive"]}
 serde_json = {version="1.0.140"}
 ssh-key = {version="0.6.7", features=["ed25519", "serde"]}
 thiserror = "2.0.12"
 tokio = {version="1.45.1",features=["full"]}
 toml = "0.8.23"
+humantime = "2.1.0"
+async-trait = "0.1.88"
+tempfile = "3.10.1"
+
+[features]
+test_auth =[]
+
+[dev-dependencies]
+
+
