--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -10,4 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v26
       - name: Building package
-        run: nix build 
+        run: nix build
+  integration_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: cachix/install-nix-action@v26
+      - name: Building package
+        run: nix develop -c cargo test --test integration_test --features test_auth
