--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ async-trait = "0.1.88"
 tempfile = "3.10.1"
 arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
 ed25519-dalek = { version = "2.1.1", optional = true, features = ["serde"] }
+glob = "0.3.3"
 
 
 [features]
