--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v26
       - name: Building package
-        run: nix develop -c cargo test --test integration_test --features test_auth
+        run: nix build ".#checks.x86_64-linux.nixos-test"
+
   nixos_integration_test:
     runs-on: ubuntu-latest
     steps:
