--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ minijinja = "2.10.2"
 nix = {version="0.30.1", features= ["process", "user", "socket"]}
 pam = "0.8"
 rand = "0.9.1"
-russh = {version="0.52.1", features=["async-trait"]}
+#russh = {version="0.52.1", features=["async-trait"]}
+russh = {git = "https://github.com/gvz/russh.git", features=["async-trait"]}
 russh-keys = "0.49.2"
 serde = {version="1.0.219", features=["derive"]}
 serde_json = {version="1.0.140"}
