tests: add end-to-end test
tests host and user key signing

--- a/tests/nixos_test/config/user.toml
+++ b/tests/nixos_test/config/user.toml
@@ -1,5 +1,5 @@
 [users]
-test="./test_user_template.toml"
-test2="./test2_user_template.toml"
+alice="./test_user_template.toml"
+bob="./test_user_template.toml"
 
 
