--- a/config/config.toml
+++ b/config/config.toml
@@ -2,6 +2,7 @@
 bind="127.0.0.1"
 port=2222
 private_key="/etc/ssh/ssh_host_ed25519_key"
+certificate="/etc/ssh/ssh_host_ed25519_key-cert.pub"
 
 [ca]
 ca_key="../test_data/test_key"
