--- a/tests/end_to_end_test/config/config.toml
+++ b/tests/end_to_end_test/config/config.toml
@@ -6,10 +6,10 @@ private_key="/etc/ssh/ssh_host_ed25519_key"
 certificate="/etc/ssh/ssh_host_ed25519_key-cert.pub"
 
 [ca]
-ca_key="/etc/ssh_acme/ca_key"
-user_list_file="/etc/ssh_acme/user.toml"
-default_user_template="/etc/ssh_acme/user_default.toml"
-host_inventory="/etc/ssh_acme/hosts/"
+ca_key="/etc/ssh_ca/ca_key"
+user_list_file="/etc/ssh_ca/user.toml"
+default_user_template="/etc/ssh_ca/user_default.toml"
+host_inventory="/etc/ssh_ca/hosts/"
 
 
 [identity_handlers]
