--- a/tests/end_to_end_test/ssh_ca.service
+++ b/tests/end_to_end_test/ssh_ca.service
@@ -3,7 +3,7 @@ Description=SSH Certificate Authority
 
 [Service]
 Environment="RUST_LOG=debug"
-ExecStart=/run/current-system/sw/bin/ssh_acme_server -c /etc/ssh_acme/config.toml
+ExecStart=/run/current-system/sw/bin/ssh_ca_server -c /etc/ssh_ca/config.toml
 
 [Install]
 WantedBy=multi-user.target
