--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
 ed25519-dalek = { version = "2.1.1", optional = true, features = ["serde"] }
 glob = "0.3.3"
 zeroize = "1.8.2"
+subtle = "2.6"
 
 
 [features]
