--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v26
-      - name: Building package
-        run: nix build ".#checks.x86_64-linux.end_to_end_test"
+      - name: run cecks
+        run: nix flake check
